Build 45
- Added Freedom Guard Units: Raider, Spider Bike (and DoubleRailGun weapon)
- Added Freedom Guard buildings: Headquarter, Laser Turret
- Some buildings refactoring

Build 44 (13.10.2013)
- Added level objective text in game menu
- First implementation of shroud
- Added shroud on minimap
- Map refactoring
- Add word warp function for text in game objective window
- Starting to work on Imperium Level 1 map
- Added snow sprites for: Headquarter, Water Launch Pad, Taelon Power, Training Facility, Assembly Plant, Plasma Turret, Water Well, Taelon Mine
- Added new buildings: Civilian Horizontal Bridge, Small Wall 1, Small Wall 2

Build 43 (22.08.2013)
- Fly units can't "stand" above buildings structures
- Show attack cursor when mouse placed on enemy unit
- Tactical AI: Attack enemy unit when it moved inside seeing range
- Tactical AI: Damage tolerance now works
- Tactical AI: basic actions when unit under attack
- Tactical AI: Orders implemented: scout & harass
- Bugfix: weapon location fix when unit teleported
- Bugfix: bridge construction fixed
- Bugfix: fixed freighter auto-harvesting
- Some code refactoring and optimizations

Build 42 (28.06.2013)
- Bugfix: Fog of war fix during unit teleport
- Bugfix: Unit couldn't enter invader transport
- Bugfix: demolishing Temporal gate during charge sate
- Bugfix: minimap fog error when unit moves near right side
- Bugfix: Fog drawing function rewritten to allow correct fog display on right and bottom edges
- Bugfix: do not select unit/building if it positioned under the fog
- Units and buildings of other players now colored differently
- Game basic parameters can be configured throw config object
- Added damage animation for all units
- Added units without weapons: Shredder, Hostage Taker, Water Contaminator
- Added Infiltrator unit (without spy abilities)

Build 41 (14.06.2013)
- Added level select screen
- Added game archive
- Game require browser to support WebM video

Build 40 (05.06.2013)